# ufo

src/ufo/operators/aerosols/: CMakeLists.txt
src/ufo/operators/aerosols/aod_rm/: CMakeLists.txt  ObsAOD_RM.cc  ObsAOD_RM.h  ObsAOD_RM.interface.F90  ObsAOD_RM.interface.h  ObsAOD_RMParameters.h  ObsAOD_RMTLAD.cc  ObsAOD_RMTLAD.h  ObsAOD_RMTLAD.interface.F90  ObsAOD_RMTLAD.interface.h  ufo_aod_rm_mod.F90  ufo_aod_rm_tlad_mod.F90
src/ufo/operators/aerosols/aodcmaq/: CMAQ2GEOS_MieObs.F90  CMakeLists.txt  GEOS_MieObs.F90  ObsAodCmaq.cc  ObsAodCmaq.h  ObsAodCmaq.interface.F90  ObsAodCmaq.interface.h  ObsAodCmaqParameters.h  ObsAodCmaqTLAD.cc  ObsAodCmaqTLAD.h  ObsAodCmaqTLAD.interface.F90  ObsAodCmaqTLAD.interface.h  ufo_aodcmaq_mod.F90  ufo_aodcmaq_tlad_mod.F90  ufo_aodgeos_tlad_mod.F90
